@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2007, 2010 THALES GLOBAL SERVICES.
+ * Copyright (c) 2007, 2019 THALES GLOBAL SERVICES and others.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
@@ -12,17 +12,23 @@
  *******************************************************************************/
 package org.eclipse.sirius.diagram.business.api.query;
 
+import java.util.Collections;
 import java.util.Iterator;
 
 import org.eclipse.emf.ecore.EObject;
+import org.eclipse.sirius.diagram.DDiagram;
 import org.eclipse.sirius.diagram.DDiagramElement;
+import org.eclipse.sirius.diagram.DNode;
+import org.eclipse.sirius.diagram.DNodeContainer;
+import org.eclipse.sirius.diagram.DNodeList;
 import org.eclipse.sirius.diagram.DragAndDropTarget;
 import org.eclipse.sirius.ext.base.Option;
 import org.eclipse.sirius.ext.base.Options;
 
+import com.google.common.collect.Iterables;
+
 /**
- * A class aggregating all the queries (read-only!) having a
- * {@link DragAndDropTarget} as a starting point.
+ * A class aggregating all the queries (read-only!) having a {@link DragAndDropTarget} as a starting point.
  * 
  * @author mporhel
  * 
@@ -40,15 +46,26 @@ public class DragAndDropTargetQuery {
     public DragAndDropTargetQuery(DragAndDropTarget dndTarget) {
         this.dndTarget = dndTarget;
     }
+    
+    /**
+     * Static factory to create a new query on a particular element.
+     * 
+     * @param dndTarget
+     *            the element to query.
+     * @return a query on the dndTarget.
+     */
+    public static DragAndDropTargetQuery on(DragAndDropTarget dndTarget) {
+        return new DragAndDropTargetQuery(dndTarget);
+    }
+
 
     /**
-     * <strong>Warning</strong>: despite its name, this method find the
-     * <strong>FISRT</strong> diagram element which matches mapping name and
-     * semantic object as target.
+     * <strong>Warning</strong>: despite its name, this method find the <strong>FISRT</strong> diagram element which
+     * matches mapping name and semantic object as target.
      * 
      * <p>
-     * Look for a given DDiagram element having the mapping name and a semantic
-     * instance and the current {@link DragAndDropTarget} container.
+     * Look for a given DDiagram element having the mapping name and a semantic instance and the current
+     * {@link DragAndDropTarget} container.
      * </p>
      * 
      * @param mappingName
@@ -71,5 +88,26 @@ public class DragAndDropTargetQuery {
             }
         }
         return Options.newNone();
+    }
+
+    /**
+     * Returns all the logical children elements of the target.
+     * 
+     * @return the logical children elements of the target.
+     */
+    public Iterable<? extends DDiagramElement> getLogicalChildren() {
+        Iterable<? extends DDiagramElement> children;
+        if (dndTarget instanceof DDiagram) {
+            children = Iterables.concat(((DDiagram) dndTarget).getOwnedDiagramElements(), ((DDiagram) dndTarget).getEdges());
+        } else if (dndTarget instanceof DNodeContainer) {
+            children = Iterables.concat(((DNodeContainer) dndTarget).getOwnedDiagramElements(), ((DNodeContainer) dndTarget).getOwnedBorderedNodes());
+        } else if (dndTarget instanceof DNodeList) {
+            children = Iterables.concat(((DNodeList) dndTarget).getElements(), ((DNodeList) dndTarget).getOwnedBorderedNodes());
+        } else if (dndTarget instanceof DNode) {
+            children = ((DNode) dndTarget).getOwnedBorderedNodes();
+        } else {
+            children = Collections.emptySet();
+        }
+        return children;
     }
 }
